[package]
name = "klr"
version = "0.1.0"
authors = ["Michael Greenberg <michael.greenberg@pomona.edu>"]
edition = "2018"
license = "GPL-3.0-only"

[lib]
name = "klr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashconsing = "1.0"
